# NLP-Project

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
nlp_project/: nn_classifier.py  nn_extra.py  nn_utils.py  notebook_utils.py
notebooks/: Bayes_LogReg.ipynb  Bert.ipynb  BoW_Models.ipynb  DepParsing.ipynb  Example.ipynb  Final.ipynb  Simple_Stats+Clustering_Doc_Vectorization+wordEmbeddingModel.ipynb  Untitled.ipynb
notebooks/Task1/: T1_BoW_Models.ipynb  T1_DepParsing.ipynb  T1_Transformers.ipynb  T1_word_embedding.ipynb
notebooks/Task2/: T2_BoW_Models.ipynb  T2_DepParsing.ipynb  T2_Transformers.ipynb  T2_word_embedding.ipynb
