[tool.poetry]
name = "nlp-project"
version = "0.1.0"
description = "Natural Language Processing Project"
authors = ["davide-rigamonti-polimi <davide2.rigamonti@mail.polimi.it>"]
readme = "README.md"
packages = [{include = "nlp_project"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
notebook = "^6.5.4"
nltk = "^3.8.1"
bs4 = "^0.0.1"
urllib3 = "^1.26.15"
requests = "^2.28.2"
pdfplumber = "^0.8.0"
tabula-py = "^2.7.0"
scikit-learn = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.0"
lightgbm = "^3.3.5"
gensim = "^4.3.1"
plotly = "^5.14.1"
spacy = "^3.5.1"
stanza = "^1.5.0"
plac = "^1.3.5"
torch = "^2.0.0"
tqdm = "^4.65.0"
jedi = "^0.18.2"
flakeheaven = "3.2.1"
flake8-bandit = ">=3.0.0"
black = "23.3.0"
pre-commit = "^3.2.2"
jupyter = "^1.0.0"
flake8-docstrings = "^1.7.0"
flake8 = ">=4.0.1"
transformers = "^4.28.1"
datasets = "^2.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flakeheaven]
format = "grouped"
max_line_length = 90
show_source = true

[tool.flakeheaven.plugins]
pyflakes = ["+*", "-F401"]
flake8-bandit = ["-*", "+S1??"]
"flake8-*" = ["+*"]
flake8-docstrings = ["-*"]

[tool.black]
line-length = 90
